# creator-flow

./: .gitignore  AGENTS.md  LICENSE  README.en.md  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: database.py  models.py
backend/app/metrics/: fake_metrics.py  fake_review_summary.py  (+1 more)
backend/tests/: conftest.py  test_content_plans.py  test_douyin_provider_adapter_skeleton.py  test_douyin_provider_registry_routing.py  test_douyin_provider_sandbox_metrics_poc.py  test_douyin_provider_sandbox_ops.py  test_douyin_sandbox_api_contract.py  test_fake_llm_provider.py  test_fake_renderer.py  test_fake_subtitle_generator.py  test_generation_runs.py  test_generation_schedules.py  test_health.py  test_limited_metrics_read_guarded.py  test_materials.py  test_metric_review_summaries.py  test_metrics.py  test_projects.py  test_provider_connection_state.py  test_provider_credential_references.py  test_provider_credential_storage_boundary.py  test_provider_oauth_boundaries.py  test_provider_oauth_state_storage.py  test_provider_readiness_summaries.py  test_provider_real_provider_controls.py  test_provider_registry.py  test_provider_security_audit.py  test_provider_token_exchange_boundary.py  test_provider_token_lifecycle_boundaries.py  test_publish_intent_workflow.py  test_publish_status_reconciliation.py  test_publishing.py  test_real_publish_adapter_guarded.py  test_render_jobs.py  test_review_drafts.py  test_script_drafts.py  test_secret_redaction.py  test_storyboards.py  test_subtitle_drafts.py  test_topic_candidates.py
(+229 files in other folders)
